add err 401 in auth, testauth and swagger documentation
